<resources>
    <string name="app_name">PC1DAM20100770</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edTxEm1">Enter email\n\n</string>
    <string name="edTxPass1">Enter password</string>
    <string name="btnLog1">Login\n</string>
    <string name="signText">SIGN IN</string>
    <string name="txV3">Nombre</string>
    <string name="txV4">Edad</string>
    <string name="txV5">Fecha de nacimiento\n</string>
    <string name="tva">RENDIMIENTO</string>
    <string name="edTxKil">Kilometros recorridos</string>
    <string name="edTxJg">Minutos jugados</string>
    <string name="btnForm">Calcular</string>
    <string name="tvg">El rendimiento es:</string>
    <string name="txVieResult" />
    <string name="txResult">Resultado</string>
    <string name="fragJUg">Jugadores</string>
    <string name="fragRend">Rendimiento</string>
    <string name="asd">JUGADORES</string>
</resources>